--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "react-dom": "^18.2.0",
     "react-intersection-observer": "^9.4.3",
     "react-scripts": "5.0.1",
-    "react-slick": "^0.29.0"
+    "react-slick": "^0.29.0",
+    "slick-carousel": "^1.8.1"
   },
   "devDependencies": {
     "@types/jest": "^28.1.8",
@@ -16,6 +17,7 @@
     "@types/react": "^18.0.17",
     "@types/react-dom": "^18.0.6",
     "@types/react-icons": "^3.0.0",
+    "@types/react-slick": "^0.23.10",
     "@types/react-vertical-timeline-component": "^3.3.3",
     "@typescript-eslint/eslint-plugin": "^5.35.1",
     "@typescript-eslint/parser": "^5.35.1",
